2006-03-12  Daniel Wagner  <wagi@monom.org>

	* src/libfreebobavc/ieee1394service.cpp (transactionBlock): Set retry
	value to 10. 

2006-03-10  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bump to 0.5.0

	* src/avdevice.cpp: Plug connection discovering
	finished. 
	* src/avdevicesubunit.cpp: Likewise.
	* src/avdevicesubunit.h: Likewise.
	* src/avplug.cpp: Likewise.
	* src/avplug.h: Likewise.
	* src/functionblock.cpp: Likewise.
	* src/functionblock.h: Likewise.
	
	* src/libfreebobavc/Makefile.am: New files added.
	* src/libfreebobavc/avc_extended_subunit_info.cpp: Likewise.
	* src/libfreebobavc/avc_extended_subunit_info.h: Likewise

	* src/libfreebobavc/avc_definitions.h: Several small improvements.
	* src/libfreebobavc/avc_extended_cmd_generic.cpp: Likewise.
	* src/libfreebobavc/avc_extended_cmd_generic.h: Likewise.
	* src/libfreebobavc/avc_extended_plug_info.cpp: Likewise.
	* src/libfreebobavc/avc_generic.cpp: Likewise.

2006-03-05  Daniel Wagner  <wagi@monom.org>

	* src/avdevice.cpp: Plug connection discovering also on
	subunits (disabled because missing funciton blocks).
	Sync connections code cleanup.
	* src/avdevice.h: Likewise.
	* src/avdevicesubunit.cpp: Likewise.
	* src/avdevicesubunit.h: Likewise.
	* src/avplug.cpp: Likewise.
	* src/avplug.h: Likewise.

	* src/Makefile.am: Added functionblock.cpp and
	functionblock.h
	* src/functionblock.cpp: New file
	* src/functionblock.h: Likewise.

2006-03-04  Daniel Wagner  <wagi@monom.org>

	* src/avdevice.cpp: Sync mode discovering improved.
	* src/avdevice.h: Likewise.
	* src/avplug.cpp: Likewise.
	* src/avplug.h: Likewise.

	* tests/test-freebob.c: Added 'odiscover' command which
	does not print the xml stuff.

	* src/avdevice.cpp: Added 'verbose' argument to constructor
	and set debug level to DEBUG_LEVEL_VERBOSE if 'verbose'
	is true, e.g enables verbose mode with '-v' argument passed
	to test-freebob.
	* src/avdevice.h: Likewsise.
	* src/avdevicesubunit.cpp: Likewsise.